--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chatapp",
+  "name": "MERN Chat App",
   "version": "1.0.0",
-  "description": "MERN Chat app via web sockets",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon src/index"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,6 @@
   "dependencies": {
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
